do not delete these generated files
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36003 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/e2fsprogs/intl/Makefile.in
+++ b/src/router/e2fsprogs/intl/Makefile.in
@@ -499,7 +499,7 @@ coverage.txt::
 
 mostlyclean:
 	rm -f *.a *.la *.o *.obj *.lo core core.*
-	rm -f libgnuintl.h libintl.h charset.alias ref-add.sed ref-del.sed
+	rm -f charset.alias ref-add.sed ref-del.sed
 	rm -f -r .libs _libs
 
 clean:: mostlyclean
