--- a/src/router/daq/sfbpf/Makefile.am
+++ b/src/router/daq/sfbpf/Makefile.am
@@ -37,22 +37,23 @@ sfbpf-int.h \
 sfbpf-int.c \
 runlex.sh
 
-nodist_libsfbpf_la_SOURCES = ${builddir}/sf_grammar.c ${builddir}/sf_scanner.c ${builddir}/tokdefs.h
+nodist_libsfbpf_la_SOURCES = sf_grammar.c sf_scanner.c tokdefs.h
 
 libsfbpf_la_CFLAGS = -Dyylval=sfbpf_lval
 libsfbpf_la_LDFLAGS = -version-info 0:1:0 @XCCFLAGS@
 
 # use of $@ and $< here is a GNU idiom that borks BSD
-${builddir}/sf_scanner.c: ${srcdir}/scanner.l ${builddir}/tokdefs.h
-	@rm -f ${builddir}/sf_scanner.c
-	${srcdir}/runlex.sh $(V_LEX) -osf_scanner.c ${srcdir}/scanner.l
+sf_scanner.c: $(srcdir)/scanner.l
+	@rm -f $(srcdir)/sf_scanner.c
+	$(srcdir)/runlex.sh $(V_LEX) -osf_scanner.c $(srcdir)/scanner.l
 
-${builddir}/sf_grammar.c: ${srcdir}/grammar.y
-	@rm -f ${builddir}/sf_grammar.c ${builddir}/tokdefs.h
-	$(V_YACC) -d ${srcdir}/grammar.y
+sf_scanner.o: sf_scanner.c tokdefs.h
+
+tokdefs.h: sf_grammar.c
+sf_grammar.c: $(srcdir)/grammar.y
+	@rm -f sf_grammar.c tokdefs.h
+	$(V_YACC) -d $(srcdir)/grammar.y
 	mv y.tab.c sf_grammar.c
 	mv y.tab.h tokdefs.h
 
-${builddir}/tokdefs.h: ${builddir}/sf_grammar.c ; @true
-
-CLEANFILES = ${builddir}/sf_scanner.c ${builddir}/sf_grammar.c ${builddir}/tokdefs.h ${builddir}/sf_scanner.h
+CLEANFILES = sf_scanner.c sf_grammar.c tokdefs.h sf_scanner.h
