--- a/src/linux/universal/linux-4.9/arch/arm/boot/dts/armada-385-linksys-venom.dts
+++ b/src/linux/universal/linux-4.9/arch/arm/boot/dts/armada-385-linksys-venom.dts
@@ -48,7 +48,9 @@
 		     "marvell,armada380";
 
 	chosen {
+		bootargs = "console=ttyS0,115200";
 		stdout-path = "serial0:115200n8";
+		append-rootblock = "root=/dev/mtdblock";
 	};
 
 	memory {
