--- a/src/linux/universal/linux-4.4/init/Kconfig
+++ b/src/linux/universal/linux-4.4/init/Kconfig
@@ -1312,6 +1312,17 @@ source "usr/Kconfig"
 
 endif
 
+choice
+	prompt "Compiler optimization level"
+	default CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE
+
+config CC_OPTIMIZE_FOR_PERFORMANCE
+	bool "Optimize for performance"
+	help
+	  This is the default optimization level for the kernel, building
+	  with the "-O2" compiler flag for best performance and most
+	  helpful compile-time warnings.
+
 config CC_OPTIMIZE_FOR_SIZE
 	bool "Optimize for size"
 	help
@@ -1333,6 +1344,8 @@ config OPTIMIZE_INLINING
 	  is there to test gcc for this.
 
 	  If unsure, say N.
+
+endchoice
 
 config SYSCTL
 	bool
