--- a/src/linux/universal/linux-4.4/arch/powerpc/boot/dts/tl-wdr4900-v1.dts
+++ b/src/linux/universal/linux-4.4/arch/powerpc/boot/dts/tl-wdr4900-v1.dts
@@ -54,12 +54,12 @@
 				};
 
 				kernel@60000 {
-					reg = <0x00060000 0x00250000>;
+					reg = <0x00060000 0x00240000>;
 					label = "kernel";
 				};
 
 				rootfs@2b0000 {
-					reg = <0x002b0000 0x00d10000>;
+					reg = <0x002a0000 0x00d20000>;
 					label = "rootfs";
 				};
 
