--- a/src/linux/universal/linux-4.14/arch/arm64/boot/dts/cavium/Makefile
+++ b/src/linux/universal/linux-4.14/arch/arm64/boot/dts/cavium/Makefile
@@ -3,6 +3,8 @@ dtb-$(CONFIG_ARCH_THUNDER) += thunder-88xx.dtb
 dtb-$(CONFIG_ARCH_THUNDER2) += thunder2-99xx.dtb
 dtb-$(CONFIG_ARCH_GW6300) += gw6300-linux.dtb
 dtb-$(CONFIG_ARCH_GW6304) += gw6304-linux.dtb
+dtb-$(CONFIG_ARCH_GW6400) += gw6400-linux.dtb
+dtb-$(CONFIG_ARCH_GW6404) += gw6404-linux.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
