--- a/src/router/minidlna/minidlna/Makefile
+++ b/src/router/minidlna/minidlna/Makefile
@@ -139,6 +139,7 @@ tagutils/textutils.o: tagutils/misc.h tagutils/textutils.h log.h
 tagutils/tagutils.o: tagutils/tagutils-asf.c tagutils/tagutils-flc.c tagutils/tagutils-plist.c tagutils/tagutils-misc.c
 tagutils/tagutils.o: tagutils/tagutils-aac.c tagutils/tagutils-asf.h tagutils/tagutils-flc.h tagutils/tagutils-mp3.c tagutils/tagutils-wav.c
 tagutils/tagutils.o: tagutils/tagutils-ogg.c tagutils/tagutils-aac.h tagutils/tagutils.h tagutils/tagutils-mp3.h tagutils/tagutils-ogg.h log.h
+tagutils/tagutils.o: tagutils/tagutils-dff.c tagutils/tagutils-dff.h tagutils/tagutils-dsf.c tagutils/tagutils-dsf.h 
 playlist.o: playlist.h
 inotify.o: inotify.h playlist.h
 image_utils.o: image_utils.h
