keep metadata optionally which will speed up scanning alot
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36214 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/minidlna/minidlna/minidlna.conf
+++ b/src/router/minidlna/minidlna/minidlna.conf
@@ -95,3 +95,10 @@ model_number=1
 # enable subtitle support by default on unknown clients.
 # note: the default is yes
 #enable_subtitles=yes
+
+# keep metadata to allow for fast rebuilding of the database
+keep_metadata=no
+
+# keep the metadata in the folder .meta next to the media otherwise store in the cache directory
+# this is useful if you have removable disks containing your media
+keep_metadata_with_media=no
