--- a/src/linux/universal/linux-4.14/Makefile
+++ b/src/linux/universal/linux-4.14/Makefile
@@ -1,8 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0
 VERSION = 4
 PATCHLEVEL = 14
-SUBLEVEL = 51
-EXTRAVERSION =
+SUBLEVEL = 52
+EXTRAVERSION = -rc1
 NAME = Petit Gorille
 
 # *DOCUMENTATION*
