add some missing headers
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36255 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-4.4_bcm4908/arch/arm64/brcm/Makefile
+++ b/src/linux/universal/linux-4.4_bcm4908/arch/arm64/brcm/Makefile
@@ -20,6 +20,7 @@ obj-$(CONFIG_ARM64) += bdmf/
 obj-$(CONFIG_ARM64) += rdd/
 obj-$(CONFIG_ARM64) += rdpa/
 obj-$(CONFIG_ARM64) += mcast/
+obj-$(CONFIG_ARM64) += serial/
 
 
 obj-$(CONFIG_ARM64) += bcm_legacy_io_map.o
