--- a/src/linux/universal/linux-4.4_bcm4908/arch/arm64/boot/dts/broadcom/Makefile
+++ b/src/linux/universal/linux-4.4_bcm4908/arch/arm64/boot/dts/broadcom/Makefile
@@ -1,4 +1,5 @@
 dtb-$(CONFIG_ARCH_BCM_IPROC) += ns2-svk.dtb
+dtb-$(CONFIG_ARCH_BCM94908) += 94908.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
