fix media scanner if metadata feature isnt enabled
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36311 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/minidlna/minidlna/Makefile
+++ b/src/router/minidlna/minidlna/Makefile
@@ -14,7 +14,7 @@
 #CFLAGS = -Wall -g -Os -D_GNU_SOURCE
 
 LDFLAGS+= -Wl,--gc-sections
-CFLAGS = -Wall $(COPTS) $(MIPS16_OPT) -ffunction-sections -fdata-sections -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -DHAVE_LIBAVUTIL_AVUTIL_H -DHAVE_LIBAVCODEC_AVCODEC_H -DHAVE_LIBAVFORMAT_AVFORMAT_H -DHAVE_VORBISFILE -DNEED_OGG\
+CFLAGS = -Wall $(COPTS) $(MIPS16_OPT) -DNEED_PRINTF -ffunction-sections -fdata-sections -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -DHAVE_LIBAVUTIL_AVUTIL_H -DHAVE_LIBAVCODEC_AVCODEC_H -DHAVE_LIBAVFORMAT_AVFORMAT_H -DHAVE_VORBISFILE -DNEED_OGG\
          -I$(MINI_DLNA_PATH)/ffmpeg-3.1 \
          -I$(MINI_DLNA_PATH)/ffmpeg-3.1/libavcodec \
          -I$(MINI_DLNA_PATH)/ffmpeg-3.1/libavformat \
