fix warnings for gcc 8.1
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36319 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-4.9/Makefile
+++ b/src/linux/universal/linux-4.9/Makefile
@@ -405,7 +405,7 @@ KBUILD_CFLAGS   := -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs \
 		   -fno-strict-aliasing -fno-common \
 		   -Werror-implicit-function-declaration \
 		   -Wno-format-security \
-		   -std=gnu89 $(call cc-option,-fno-PIE)
+		   -std=gnu89 $(call cc-option,-fno-PIE) $(call cc-option,-Wno-attribute-alias)
 
 
 KBUILD_AFLAGS_KERNEL :=
