--- a/src/linux/universal/linux-4.14/Makefile
+++ b/src/linux/universal/linux-4.14/Makefile
@@ -426,7 +426,7 @@ KBUILD_CFLAGS   := -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs \
 		   -fno-strict-aliasing -fno-common -fshort-wchar \
 		   -Werror-implicit-function-declaration \
 		   -Wno-format-security \
-		   -std=gnu89
+		   -std=gnu89 $(call cc-option,-Wno-attribute-alias)
 KBUILD_CPPFLAGS := -D__KERNEL__
 
 KBUILD_AFLAGS_KERNEL :=
