update pptp-client to 1.10.0 but revert some changes to previous version since 1.10.0 has only one major change. it breaks backward compatbility to older devices using 2.4 kernels like the WRT54G.
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36350 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/pptp-client/Makefile
+++ b/src/router/pptp-client/Makefile
@@ -1,5 +1,5 @@
 # $Id: Makefile,v 1.51 2011/11/29 22:05:07 quozl Exp $
-VERSION=1.9.0
+VERSION=1.10.0
 RELEASE=
 
 #################################################################
@@ -30,10 +30,10 @@ PPTP_BIN = pptp
 
 PPTP_OBJS = pptp.o pptp_gre.o ppp_fcs.o \
             pptp_ctrl.o dirutil.o vector.o \
-            inststr.o util.o version.o test.o routing.o \
-	    pptp_quirks.o orckit_quirks.o pqueue.o pptp_callmgr.o pptp_compat.o
+	    inststr.o util.o version.o test-redirections.o \
+	    pptp_quirks.o orckit_quirks.o pqueue.o pptp_callmgr.o pptp_compat.o routing.o
 
-PPTP_DEPS = pptp_callmgr.h pptp_gre.h ppp_fcs.h util.h test.h \
+PPTP_DEPS = pptp_callmgr.h pptp_gre.h ppp_fcs.h util.h test-redirections.h \
 	    pptp_quirks.h orckit_quirks.h config.h pqueue.h routing.h
 
 all: config.h $(PPTP_BIN)
@@ -51,6 +51,7 @@ config.h:
 
 vector_test: vector_test.o vector.o
 	$(CC) -o vector_test vector_test.o vector.o
+	./vector_test
 
 clean:
 	$(RM) *.o config.h pptpsetup.8
@@ -115,7 +116,6 @@ pptp.o: pptp_callmgr.h
 pptp.o: pptp_gre.h
 pptp.o: pptp_compat.h
 pptp.o: version.h
-pptp.o: inststr.h
 pptp.o: util.h
 pptp.o: pptp_quirks.h
 pptp.o: pptp_msg.h
@@ -145,7 +145,7 @@ pptp_gre.o: pptp_msg.h
 pptp_gre.o: pptp_gre.h
 pptp_gre.o: util.h
 pptp_gre.o: pqueue.h
-pptp_gre.o: test.h
+pptp_gre.o: test-redirections.h
 pptp_quirks.o: orckit_quirks.h
 pptp_quirks.o: pptp_options.h
 pptp_quirks.o: pptp_ctrl.h
@@ -155,8 +155,9 @@ pptp_quirks.o: pptp_quirks.h
 pqueue.o: util.h
 pqueue.o: pqueue.h
 routing.o: routing.h
-test.o: util.h
-test.o: test.h
+routing.o: config.h
+test-redirections.o: util.h
+test-redirections.o: test-redirections.h
 util.o: util.h
 vector.o: pptp_ctrl.h
 vector.o: pptp_compat.h
