--- a/src/linux/universal/linux-4.14/arch/mips/Makefile
+++ b/src/linux/universal/linux-4.14/arch/mips/Makefile
@@ -197,9 +197,9 @@ ifeq (,$(findstring march=octeon2, $(cflags-y)))
 cflags-y += -Wa,-march=octeon2
 endif
 else
-cflags-y += $(call cc-option,-march=octeon) -Wa,--trap
-ifeq (,$(findstring march=octeon, $(cflags-y)))
-cflags-y += -Wa,-march=octeon
+cflags-y += $(call cc-option,-march=octeon+) -Wa,--trap
+ifeq (,$(findstring march=octeon+, $(cflags-y)))
+cflags-y += -Wa,-march=octeon+
 endif
 endif
 endif
