known to be working
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36382 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-4.4/arch/mips/Makefile
+++ b/src/linux/universal/linux-4.4/arch/mips/Makefile
@@ -178,7 +178,7 @@ endif
 else
 cflags-y += $(call cc-option,-march=octeon) -Wa,--trap
 ifeq (,$(findstring march=octeon, $(cflags-y)))
-cflags-y += -Wa,-march=octeon
+cflags-y += -Wa,-march=octeon+
 endif
 endif
 endif
