to prevent collisions, we need to use another name
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36403 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/e2fsprogs/configure.ac
+++ b/src/router/e2fsprogs/configure.ac
@@ -527,11 +527,11 @@ then
 	PROFILED_LIBBLKID=$LIBBLKID
 	AC_MSG_RESULT([Disabling private blkid library])
 else
-	LIBBLKID='$(LIB)/libblkid'$LIB_EXT
+	LIBBLKID='$(LIB)/libe2fsblkid'$LIB_EXT
 	DEPLIBBLKID=$LIBBLKID
-	STATIC_LIBBLKID='$(LIB)/libblkid'$STATIC_LIB_EXT
+	STATIC_LIBBLKID='$(LIB)/libe2fsblkid'$STATIC_LIB_EXT
 	DEPSTATIC_LIBBLKID=$STATIC_LIBBLKID
-	PROFILED_LIBBLKID='$(LIB)/libblkid'$PROFILED_LIB_EXT
+	PROFILED_LIBBLKID='$(LIB)/libe2fsblkid'$PROFILED_LIB_EXT
 	DEPPROFILED_LIBBLKID=$PROFILED_LIBBLKID
 	AC_DEFINE(CONFIG_BUILD_FINDFS, 1)
 	AC_MSG_RESULT([Enabling private blkid library])
@@ -547,11 +547,11 @@ if test -n "$LIBBLKID"; then
 	PROFILED_LIBBLKID=$LIBBLKID
 	AC_MSG_RESULT([Using system blkid library by default])
 else
-	LIBBLKID='$(LIB)/libblkid'$LIB_EXT
+	LIBBLKID='$(LIB)/libe2fsblkid'$LIB_EXT
 	DEPLIBBLKID=$LIBBLKID
-	STATIC_LIBBLKID='$(LIB)/libblkid'$STATIC_LIB_EXT
+	STATIC_LIBBLKID='$(LIB)/libe2fsblkid'$STATIC_LIB_EXT
 	DEPSTATIC_LIBBLKID=$STATIC_LIBBLKID
-	PROFILED_LIBBLKID='$(LIB)/libblkid'$PROFILED_LIB_EXT
+	PROFILED_LIBBLKID='$(LIB)/libe2fsblkid'$PROFILED_LIB_EXT
 	DEPPROFILED_LIBBLKID=$PROFILED_LIBBLKID
 	AC_DEFINE(CONFIG_BUILD_FINDFS, 1)
 	AC_MSG_RESULT([Enabling private blkid library by default])
