adjust tuning parameters
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36462 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-4.4/arch/arm/Makefile
+++ b/src/linux/universal/linux-4.4/arch/arm/Makefile
@@ -75,6 +75,9 @@ KBUILD_CFLAGS	+= $(call cc-option,-fno-ipa-sra)
 arch-$(CONFIG_CPU_32v7M)	=-D__LINUX_ARM_ARCH__=7 -march=armv7-m -Wa,-march=armv7-m
 
 
+ifeq ($(CONFIG_ARCH_BRCM),y)
+arch-$(CONFIG_CPU_32v7)		=-D__LINUX_ARM_ARCH__=7 -march=armv7-a -mcpu=cortex-a9 -mtune=cortex-a9
+else
 ifeq ($(CONFIG_ARCH_QCOM),y)
 arch-$(CONFIG_CPU_32v7)		=-D__LINUX_ARM_ARCH__=7 -mcpu=cortex-a15 -mfpu=neon-vfpv4
 else
@@ -82,6 +85,7 @@ ifeq ($(CONFIG_ARM_VIRT_EXT),y)
 arch-$(CONFIG_CPU_32v7)		=-D__LINUX_ARM_ARCH__=7 $(call cc-option,-march=armv7ve,-march=armv5t -Wa$(comma)-march=armv7ve)
 else
 arch-$(CONFIG_CPU_32v7)		=-D__LINUX_ARM_ARCH__=7 $(call cc-option,-march=armv7-a,-march=armv5t -Wa$(comma)-march=armv7-a)
+endif
 endif
 endif
 arch-$(CONFIG_CPU_32v6)		=-D__LINUX_ARM_ARCH__=6 $(call cc-option,-march=armv6,-march=armv5t -Wa$(comma)-march=armv6)
