add channel survey feature (in progress)
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36486 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/kromo/dd-wrt/Makefile
+++ b/src/router/kromo/dd-wrt/Makefile
@@ -968,6 +968,9 @@ endif
 ifneq ($(CONFIG_3G),y)
 	rm -f $(INSTALLDIR)/www/index_3g.asp
 endif
+ifneq ($(CONFIG_ATH9K),y)
+	rm -f $(INSTALLDIR)/www/Channel_Survey.asp
+endif
 
 ifneq ($(CONFIG_NOCAT),y)
 	rm -f $(INSTALLDIR)/www/splash.html
