add channel survey feature (in progress)
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@36487 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/httpd/Makefile
+++ b/src/router/httpd/Makefile
@@ -949,6 +949,7 @@ ifeq ($(CONFIG_ATH9K),y)
 LDFLAGS += -L$(TOP)/libnl-tiny -lnl-tiny
 ATH9KVISOBJS += wireless_madwifiath9k.o
 ATH9KVISFILES += visuals/wireless_madwifiath9k.c
+CFLAGS += -I$(TOP)/libnl-tiny/include
 endif
 
 
